*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -19,6 +19,7 @@
 |BEN|Benin                  = [[Benin]]
 |BFA|BUR|Burkina Faso       = [[Burkina Faso]]
 |BGD|BAN|Banglades|Bangladesh = [[Banglades]]
+|BGR|BUL|Bulgaria           = [[Bulgaria]]
 |BHR|Barein|Bahrain         = [[Bahrain]]
 |BHS|BAH|Bahamas            = [[Bahamas]]
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = [[Bosnia at Herzegovina]]
@@ -32,7 +33,6 @@
 |BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BUG|Bulgaria = [[Bulgaria]]
 |BUR|Burundi = [[Burundi]]
 |BUT|Bhutan = [[Bhutan]]
 |CG|Montenegro = [[Montenegro]]
