*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -19,6 +19,7 @@
 |BEN|Benin                  = Flag of Benin.svg
 |BFA|BUR|Burkina Faso       = Flag of Burkina Faso.svg
 |BGD|BAN|Banglades|Bangladesh = Flag of Bangladesh.svg
+|BGR|BUL|Bulgaria           = Flag of Bulgaria.svg
 |BHR|Barein|Bahrain         = Flag of Bahrain.svg
 |BHS|BAH|Bahamas            = Flag of the Bahamas.svg
 |BIH|Bosnia at Herzegovina|Bosnia and Herzegovina = Flag of Bosnia and Herzegovina.svg
@@ -32,7 +33,6 @@
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BUG|Bulgaria = Flag of Bulgaria.svg
 |BUR|Burundi = Flag of Burundi.svg
 |BUT|Bhutan = Flag of Bhutan.svg
 |CG|Montenegro = Flag of Montenegro.svg
