*Empty MediaWiki Message*

--- a/Template:BDI.mw
+++ b/Template:BDI.mw
@@ -1,4 +1,1 @@
-{{country|flagcountry|Burundi}}<noinclude>
-{{Protected template}}
-[[Category:Flag templates|{{PAGENAME}}]]
-</noinclude>
+{{flagu|Burundi}}
