*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -15,6 +15,7 @@
 |AUS|Australia              = [[Australia]]
 |AUT|Austria                = [[Austria]]
 |AZE|Azerbaijan             = [[Azerbaijan]]
+|BDI|Burundi                = [[Burundi]]
 |BEL|Belgika|Belgium        = [[Belgika]]
 |BEN|Benin                  = [[Benin]]
 |BFA|BUR|Burkina Faso       = [[Burkina Faso]]
@@ -33,7 +34,6 @@
 |BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BUR|Burundi = [[Burundi]]
 |BUT|Bhutan = [[Bhutan]]
 |CG|Montenegro = [[Montenegro]]
 |CIP|Cyprus = [[Cyprus]]
