*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -15,6 +15,7 @@
 |AUS|Australia              = Flag of Australia.svg
 |AUT|Austria                = Flag of Austria.svg
 |AZE|Azerbaijan             = Flag of Azerbaijan.svg
+|BDI|Burundi                = Flag of Burundi.svg
 |BEL|Belgika|Belgium        = Flag of Belgium.svg
 |BEN|Benin                  = Flag of Benin.svg
 |BFA|BUR|Burkina Faso       = Flag of Burkina Faso.svg
@@ -33,7 +34,6 @@
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BUR|Burundi = Flag of Burundi.svg
 |BUT|Bhutan = Flag of Bhutan.svg
 |CG|Montenegro = Flag of Montenegro.svg
 |CIP|Cyprus = Flag of Cyprus.svg
