*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -31,10 +31,10 @@
 |BRA|Brasil|Brazil          = [[Brasil]]
 |BRB|BAR|Barbados           = [[Barbados]]
 |BRN|BRU|Brunei             = [[Brunei]]
+|BTN|BHU|Butan|Bhutan       = [[Butan]]
 |BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
 
-|BUT|Bhutan = [[Bhutan]]
 |CG|Montenegro = [[Montenegro]]
 |CIP|Cyprus = [[Cyprus]]
 |CIV|Cote d'Ivoire = [[Cote d'Ivoire]]
