--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -31,10 +31,10 @@
 |BRA|Brasil|Brazil          = Flag of Brazil.svg
 |BRB|BAR|Barbados           = Flag of Barbados.svg
 |BRN|BRU|Brunei             = Flag of Brunei.svg
+|BTN|BHU|Butan|Bhutan       = Flag of Bhutan.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 
-|BUT|Bhutan = Flag of Bhutan.svg
 |CG|Montenegro = Flag of Montenegro.svg
 |CIP|Cyprus = Flag of Cyprus.svg
 |CIV|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
