Lilipat ya king [[Template:Biological classification]]

--- a/Template:Taxonomic_ranks.mw
+++ b/Template:Taxonomic_ranks.mw
@@ -1,39 +1,1 @@
-<div class="tright" style="border-color: #F8FCFF;">
-<div class="thumbinner" style="width:158px;">
-<imagemap>
-Image:Biological_classification_L_Pengo.svg|150px|The various levels of the scientific classification system.
-rect 100 27 225 68 [[Species]]
-rect 100 90 225 132 [[Genus]]
-rect 100 154 225 196 [[Family (biology)|Family]]
-rect 100 217 225 259 [[Order (biology)|Order]]
-rect 100 280 225 322 [[Class (biology)|Class]]
-rect 100 344 225 386 [[Phylum]]
-rect 100 407 225 449 [[Kingdom (biology)|Kingdom]]
-rect 100 471 225 513 [[Domain (biology)|Domain]]
-rect 100 534 225 576 [[Life]]
-default [[:Image:Biological_classification_L_Pengo.svg]]
-desc none
-</imagemap>
-----
-<div class="thumbcaption"><imagemap>
-Image:Magnify-clip.png|right
-default [[Image:Biological_classification_L_Pengo.svg|Enlarge]]
-desc none
-</imagemap>{{{description|The hierarchy of {{#ifeq:{{lc:{{FULLPAGENAME}}}}|biological classification|biological classification|[[biological classification]]}}'s major eight [[taxonomic rank]]s. <!--
--->{{#switch:{{lc:{{{level|{{PAGENAME}}}}}}}|
-species=A [[genus]] contains one or more species.
-|genus=A [[family (biology)|family]] contains one or more genera.
-|family (biology)|family=An [[order (biology)|order]] contains one or more families.
-|order (biology)|order=A [[class (biology)|class]] contains one or more orders.
-|phylum=A [[kingdom (biology)|kingdom]] contains one or more phyla.
-|kingdom (biology)|kingdom=A [[Domain (biology)|domain]] contains one or more kingdoms.
-|domain (biology)|domain|life=[[Life]] is divided into domains, which are subdivided into further groups.
-|#default=<!--null-->}} Intermediate minor rankings are not shown.}}}</div></div></div><noinclude>
-
-Ining modelu (template) gagamit yang [[:Image:Biological_classification_L_Pengo.svg]] ampong [[mw:Extension:ImageMap|ImageMap]] magic ba lang pituglung-tuglung deng label boxes kareng ustung bulung at munie makuyad a pamilarawan. Maliari yang lakton ing pamilarawan kapamilatan ning <code>description</code> parameter, o maliari mung ipilit a pakit ne anti ya mong atiu king bulung ning metung a lebel a gagamitan ya ing <code>level</code> parameter.
-
-[[Category:Templates using ParserFunctions|{{PAGENAME}}]]
-[[Category:Biology navigational boxes|{{PAGENAME}}]]
-[[Category:Wikipedia imagemaps|{{PAGENAME}}]]
-
-</noinclude>
+#REDIRECT [[Template:Biological classification]]
