*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -34,8 +34,8 @@
 |BTN|BHU|Butan|Bhutan       = [[Butan]]
 |BWA|BOT|Botswana           = [[Botswana]]
 |DZA|ALG|Algeria            = [[Algeria]]
+|MNE|Montenegro             = [[Montenegro]]
 
-|CG|Montenegro = [[Montenegro]]
 |CIP|Cyprus = [[Cyprus]]
 |CIV|Cote d'Ivoire = [[Cote d'Ivoire]]
 |ČAD|Chad = [[Chad]]
