--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -34,8 +34,8 @@
 |BTN|BHU|Butan|Bhutan       = Flag of Bhutan.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
+|MNE|Montenegro             = Flag of Montenegro.svg
 
-|CG|Montenegro = Flag of Montenegro.svg
 |CIP|Cyprus = Flag of Cyprus.svg
 |CIV|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |ČAD|Chad = Flag of Chad.svg
