*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -33,10 +33,10 @@
 |BRN|BRU|Brunei             = [[Brunei]]
 |BTN|BHU|Butan|Bhutan       = [[Butan]]
 |BWA|BOT|Botswana           = [[Botswana]]
+|CYP|Sipre|Cyprus           = [[Sipre]]
 |DZA|ALG|Algeria            = [[Algeria]]
 |MNE|Montenegro             = [[Montenegro]]
 
-|CIP|Cyprus = [[Cyprus]]
 |CIV|Cote d'Ivoire = [[Cote d'Ivoire]]
 |ČAD|Chad = [[Chad]]
 |ČEŠ|Czech Republic = [[Czech Republic]]
