*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -33,10 +33,10 @@
 |BRN|BRU|Brunei             = Flag of Brunei.svg
 |BTN|BHU|Butan|Bhutan       = Flag of Bhutan.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
+|CYP|Sipre|Cyprus           = Flag of Cyprus.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 |MNE|Montenegro             = Flag of Montenegro.svg
 
-|CIP|Cyprus = Flag of Cyprus.svg
 |CIV|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |ČAD|Chad = Flag of Chad.svg
 |ČEŠ|Czech Republic = Flag of the Czech Republic.svg
