*Empty MediaWiki Message*

--- a/Template:CIV.mw
+++ b/Template:CIV.mw
@@ -1,4 +1,1 @@
-{{country|flagcountry|Côte d'Ivoire}}<noinclude>
-{{Protected template}}
-[[Category:Flag templates|{{PAGENAME}}]]
-</noinclude>
+{{flagu|Côte d'Ivoire}}
