*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -33,11 +33,11 @@
 |BRN|BRU|Brunei             = [[Brunei]]
 |BTN|BHU|Butan|Bhutan       = [[Butan]]
 |BWA|BOT|Botswana           = [[Botswana]]
+|CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
 |DZA|ALG|Algeria            = [[Algeria]]
 |MNE|Montenegro             = [[Montenegro]]
 
-|CIV|Cote d'Ivoire = [[Cote d'Ivoire]]
 |ČAD|Chad = [[Chad]]
 |ČEŠ|Czech Republic = [[Czech Republic]]
 |ČIL|Chile = [[Chile]]
