*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -33,11 +33,11 @@
 |BRN|BRU|Brunei             = Flag of Brunei.svg
 |BTN|BHU|Butan|Bhutan       = Flag of Bhutan.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
+|CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 |MNE|Montenegro             = Flag of Montenegro.svg
 
-|CIV|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |ČAD|Chad = Flag of Chad.svg
 |ČEŠ|Czech Republic = Flag of the Czech Republic.svg
 |ČIL|Chile = Flag of Chile.svg
