*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -37,8 +37,8 @@
 |CYP|Sipre|Cyprus           = [[Sipre]]
 |DZA|ALG|Algeria            = [[Algeria]]
 |MNE|Montenegro             = [[Montenegro]]
+|TCD|CHA|Chad               = [[Chad]]
 
-|ČAD|Chad = [[Chad]]
 |ČEŠ|Czech Republic = [[Czech Republic]]
 |ČIL|Chile = [[Chile]]
 |ČSSR|Czech Republic = [[Czech Republic]]
