*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -37,8 +37,8 @@
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 |MNE|Montenegro             = Flag of Montenegro.svg
+|TCD|CHA|Chad               = Flag of Chad.svg
 
-|ČAD|Chad = Flag of Chad.svg
 |ČEŠ|Czech Republic = Flag of the Czech Republic.svg
 |ČIL|Chile = Flag of Chile.svg
 |ČSSR|Czech Republic = Flag of the Czech Republic.svg
