*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -35,11 +35,11 @@
 |BWA|BOT|Botswana           = [[Botswana]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
+|CZE|Republika ning Tseka|Czech Republic = [[Republika ning Tseka]]
 |DZA|ALG|Algeria            = [[Algeria]]
 |MNE|Montenegro             = [[Montenegro]]
 |TCD|CHA|Chad               = [[Chad]]
 
-|ČEŠ|Czech Republic = [[Czech Republic]]
 |ČIL|Chile = [[Chile]]
 |ČSSR|Czech Republic = [[Czech Republic]]
 |DAN|Denmark = [[Denmark]]
