*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -35,13 +35,12 @@
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
+|CZE|Republika ning Tseka|Czech Republic = Flag of the Czech Republic.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 |MNE|Montenegro             = Flag of Montenegro.svg
 |TCD|CHA|Chad               = Flag of Chad.svg
 
-|ČEŠ|Czech Republic = Flag of the Czech Republic.svg
 |ČIL|Chile = Flag of Chile.svg
-|ČSSR|Czech Republic = Flag of the Czech Republic.svg
 |DAN|Denmark = Flag of Denmark.svg
 |DDR|East Germany = Flag of East Germany.svg
 |DMN|Dominica = Flag of Dominica.svg
