Ing '{{flagu|Filipinas}}' alilan ne ing bulung

--- a/Template:PHL.mw
+++ b/Template:PHL.mw
@@ -1,38 +1,1 @@
-{{flag|Philippines}}<noinclude>
-[[Category:Flag templates|{{PAGENAME}}]]
-[[als:Vorlage:PHL]]
-[[ar:قالب:الفلبين]]
-[[br:Patrom:Filipinez]]
-[[de:Vorlage:PHL]]
-[[el:Πρότυπο:PHL]]
-[[en:Template:PHL]]
-[[es:Plantilla:FIL]]
-[[eo:Ŝablono:PHL]]
-[[eu:Txantiloi:PHL]]
-[[fa:الگو:PHL]]
-[[fr:Modèle:Philippines]]
-[[ko:틀:PHL]]
-[[io:Template:PHL]]
-[[id:Templat:PHL]]
-[[is:Snið:PHL]]
-[[it:Template:PHL]]
-[[lb:Template:PHL]]
-[[hu:Sablon:PHL]]
-[[mn:Template:PHL]]
-[[ja:Template:PHL]]
-[[nn:Mal:PHL]]
-[[oc:Modèl:Filipinas]]
-[[pt:Predefinição:PHL]]
-[[qu:Plantilla:PHL]]
-[[ru:Шаблон:PHL]]
-[[simple:Template:PHL]]
-[[sk:Šablóna:PHL]]
-[[sl:Predloga:PHL]]
-[[sv:Mall:PHL]]
-[[tl:Template:PHL]]
-[[th:แม่แบบ:PHL]]
-[[vi:Tiêu bản:PHL]]
-[[uk:Шаблон:PHL]]
-[[zh-yue:Template:PHL]]
-[[zh:Template:PHL]]
-</noinclude>
+{{flagu|Filipinas}}
