*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -39,6 +39,7 @@
 |DZA|ALG|Algeria            = [[Algeria]]
 |IND|India                  = [[India]]
 |MNE|Montenegro             = [[Montenegro]]
+|PHL|PHI|Filipinas|Philippines = [[Filipinas]]
 |TCD|CHA|Chad               = [[Chad]]
 
 |ČIL|Chile = [[Chile]]
@@ -58,7 +59,6 @@
 |ETI|Ethiopia = [[Ethiopia]]
 |FAR|Faroe Islands = [[Faroe Islands]]
 |FIĐ|Fiji = [[Fiji]]
-|FIL|Philippines = [[Philippines]]
 |FIN|Finland = [[Finland]]
 |FRA|France = [[France]]
 |FR GIJ|France = [[France]]
