*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -39,6 +39,7 @@
 |DZA|ALG|Algeria            = Flag of Algeria.svg
 |IND|India                  = Flag of India.svg
 |MNE|Montenegro             = Flag of Montenegro.svg
+|PHL|PHI|Filipinas|Philippines = Flag of the Philippines.svg
 |TCD|CHA|Chad               = Flag of Chad.svg
 
 |ČIL|Chile = Flag of Chile.svg
@@ -58,7 +59,6 @@
 |ETI|Ethiopia = Flag of Ethiopia.svg
 |FAR|Faroe Islands = Flag of the Faroe Islands.svg
 |FIĐ|Fiji = Flag of Fiji.svg
-|FIL|Philippines = Flag of the Philippines.svg
 |FIN|Finland = Flag of Finland.svg
 |FRA|France = Flag of France.svg
 |FR GIJ|France = Flag of France.svg
