*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -33,6 +33,7 @@
 |BRN|BRU|Brunei             = [[Brunei]]
 |BTN|BHU|Butan|Bhutan       = [[Butan]]
 |BWA|BOT|Botswana           = [[Botswana]]
+|CHL|CHI|Chile              = [[Chile]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
 |CZE|Republika ning Tseka|Czech Republic = [[Republika ning Tseka]]
@@ -42,7 +43,6 @@
 |PHL|PHI|Filipinas|Philippines = [[Filipinas]]
 |TCD|CHA|Chad               = [[Chad]]
 
-|ČIL|Chile = [[Chile]]
 |DAN|Denmark = [[Denmark]]
 |DDR|East Germany = [[East Germany]]
 |DMN|Dominica = [[Dominica]]
