*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -33,6 +33,7 @@
 |BRN|BRU|Brunei             = Flag of Brunei.svg
 |BTN|BHU|Butan|Bhutan       = Flag of Bhutan.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
+|CHL|CHI|Chile              = Flag of Chile.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
 |CZE|Republika ning Tseka|Czech Republic = Flag of the Czech Republic.svg
@@ -42,7 +43,6 @@
 |PHL|PHI|Filipinas|Philippines = Flag of the Philippines.svg
 |TCD|CHA|Chad               = Flag of Chad.svg
 
-|ČIL|Chile = Flag of Chile.svg
 |DAN|Denmark = Flag of Denmark.svg
 |DDR|East Germany = Flag of East Germany.svg
 |DMN|Dominica = Flag of Dominica.svg
