--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -4,7 +4,7 @@
 |AFG|Afganistan|Afghanistan = [[Afganistan]]
 |AGO|ANG|Angola             = [[Angola]]
 |AIA|Anguilla               = [[Anguilla]]
-|ALA|Åland Islands          = [[Åland Islands]]
+|ALA|Åland|Åland Islands          = [[Åland Islands]]
 |ALB|Albania                = [[Albania]]
 |AND|Andorra                = [[Andorra]]
 |ANT|AHO|Netherlands Antilles = [[Netherlands Antilles]]
