*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -4,7 +4,7 @@
 |AFG|Afganistan|Afghanistan = Flag of Afghanistan.svg
 |AGO|ANG|Angola             = Flag of Angola.svg
 |AIA|Anguilla               = Flag of Anguilla.svg
-|ALA|Åland Islands          = Flag of Åland.svg
+|ALA|Åland|Åland Islands    = Flag of Åland.svg
 |ALB|Albania                = Flag of Albania.svg
 |AND|Andorra                = Flag of Andorra.svg
 |ANT|AHO|Netherlands Antilles = Flag of the Netherlands Antilles.svg
