*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -33,6 +33,7 @@
 |BRN|BRU|Brunei             = [[Brunei]]
 |BTN|BHU|Butan|Bhutan       = [[Butan]]
 |BWA|BOT|Botswana           = [[Botswana]]
+|CAN|Canada                 = [[Canada]]
 |CHL|CHI|Chile              = [[Chile]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
@@ -97,7 +98,6 @@
 |JUGK|Kingdom of Yugoslavia = [[Kingdom of Yugoslavia]]
 |KAJ|Cayman Islands = [[Cayman Islands]]
 |KAM|Cameroon = [[Cameroon]]
-|KAN|Canada = [[Canada]]
 |KAT|Qatar = [[Qatar]]
 |KATL|Catalonia = [[Catalonia]]
 |KAZ|Kazakhstan = [[Kazakhstan]]
