*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -33,6 +33,7 @@
 |BRN|BRU|Brunei             = Flag of Brunei.svg
 |BTN|BHU|Butan|Bhutan       = Flag of Bhutan.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
+|CAN|Canada                 = Flag of Canada.svg
 |CHL|CHI|Chile              = Flag of Chile.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
@@ -97,7 +98,6 @@
 |JUGK|Kingdom of Yugoslavia = Flag of the Kingdom of Yugoslavia.svg
 |KAJ|Cayman Islands = Flag of the Cayman Islands.svg
 |KAM|Cameroon = Flag of Cameroon.svg
-|KAN|Canada = Flag of Canada.svg
 |KAT|Qatar = Flag of Qatar.svg
 |KATL|Catalonia = Flag of Catalonia.svg
 |KAZ|Kazakhstan = Flag of Kazakhstan.svg
