*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -33,6 +33,7 @@
 |BRN|BRU|Brunei             = [[Brunei]]
 |BTN|BHU|Butan|Bhutan       = [[Butan]]
 |BWA|BOT|Botswana           = [[Botswana]]
+|CAF|CTA|Republika ning Central Aprika|Central African Republic = [[Republika ning Central Aprika]]
 |CAN|Canada                 = [[Canada]]
 |CHL|CHI|Chile              = [[Chile]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
@@ -187,7 +188,6 @@
 |SRB|Serbia = [[Serbia]]
 |SRH|SR Croatia = [[SR Croatia]]
 |SSSR|Soviet Union = [[Soviet Union]]
-|SAR|Central African Republic = [[Central African Republic]]
 |SVA|Swaziland = [[Swaziland]]
 |SV LUC|Saint Lucia = [[Saint Lucia]]
 |SV KIN|Saint Kitts and Nevis = [[Saint Kitts and Nevis]]
