*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -33,6 +33,7 @@
 |BRN|BRU|Brunei             = Flag of Brunei.svg
 |BTN|BHU|Butan|Bhutan       = Flag of Bhutan.svg
 |BWA|BOT|Botswana           = Flag of Botswana.svg
+|CAF|CTA|Republika ning Central Aprika|Central African Republic = Flag of the Central African Republic.svg
 |CAN|Canada                 = Flag of Canada.svg
 |CHL|CHI|Chile              = Flag of Chile.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
@@ -187,7 +188,6 @@
 |SRB|Serbia = Flag of Serbia.svg
 |SRH = Flag_of_SR_Croatia.svg
 |SSSR|Soviet Union = Flag of the Soviet Union.svg
-|SAR|Central African Republic = Flag of the Central African Republic.svg
 |SVA|Swaziland = Flag of Swaziland.svg
 |SV LUC|Saint Lucia = Flag of Saint Lucia.svg
 |SV KIN|Saint Kitts and Nevis = Flag of Saint Kitts and Nevis.svg
