*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -35,6 +35,7 @@
 |BWA|BOT|Botswana           = Flag of Botswana.svg
 |CAF|CTA|Republika ning Central Aprika|Central African Republic = Flag of the Central African Republic.svg
 |CAN|Canada                 = Flag of Canada.svg
+|CCK|Cocos Islands          = Flag of the Cocos (Keeling) Islands.svg
 |CHL|CHI|Chile              = Flag of Chile.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
