*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -35,6 +35,7 @@
 |BWA|BOT|Botswana           = [[Botswana]]
 |CAF|CTA|Republika ning Central Aprika|Central African Republic = [[Republika ning Central Aprika]]
 |CAN|Canada                 = [[Canada]]
+|CCK|Cocos Islands          = [[Cocos Islands]]
 |CHL|CHI|Chile              = [[Chile]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
