*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -36,6 +36,7 @@
 |CAF|CTA|Republika ning Central Aprika|Central African Republic = [[Republika ning Central Aprika]]
 |CAN|Canada                 = [[Canada]]
 |CCK|Cocos Islands          = [[Cocos Islands]]
+|CHE|SUI|Switzerland|Suiza  = [[Suiza]]
 |CHL|CHI|Chile              = [[Chile]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
@@ -200,7 +201,6 @@
 |ŠPA|Spain = [[Spain]]
 |ŠVE|Sweden = [[Sweden]]
 |ŠRI|Sri Lanka = [[Sri Lanka]]
-|ŠVI|Switzerland = [[Switzerland]]
 |TADŽ|Tajikistan = [[Tajikistan]]
 |FR POLI|French Polynesia = [[French Polynesia]]
 |TAH|French Polynesia = [[French Polynesia]]
