*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -36,6 +36,7 @@
 |CAF|CTA|Republika ning Central Aprika|Central African Republic = Flag of the Central African Republic.svg
 |CAN|Canada                 = Flag of Canada.svg
 |CCK|Cocos Islands          = Flag of the Cocos (Keeling) Islands.svg
+|CHE|SUI|Switzerland|Suiza  = Flag of Switzerland.svg
 |CHL|CHI|Chile              = Flag of Chile.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
@@ -200,7 +201,6 @@
 |ŠPA|Spain = Flag of Spain.svg
 |ŠVE|Sweden = Flag of Sweden.svg
 |ŠRI|Sri Lanka = Flag of Sri Lanka.svg
-|ŠVI|Switzerland = Flag of Switzerland.svg
 |TADŽ|Tajikistan = Flag of Tajikistan.svg
 |FR POLI|French Polynesia = Flag of French Polynesia.svg
 |TAH|French Polynesia = Flag of French Polynesia.svg
