*Empty MediaWiki Message*

--- a/Template:Bandera.mw
+++ b/Template:Bandera.mw
@@ -1,2 +1,1 @@
-[[File:{{Flagcountry|{{{1|}}}}}|border|23px]]<noinclude>
-</noinclude>
+[[File:{{Flagcountry|{{{1|}}}}}|{{{border|border}}}|{{{size|23px}}}]]
