*Empty MediaWiki Message*

--- a/Template:Bandera.mw
+++ b/Template:Bandera.mw
@@ -1,1 +1,1 @@
-[[File:{{Flagcountry|{{{1|}}}}}|{{{border|border}}}|{{{size|23px}}}]]
+[[File:{{Flagcountry|{{{1|}}}}}|{{{border|border}}}|{{{size|23px}}}]]<noinclude>[[Category:Templates ning banderang| ]]</noinclude>
