*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -38,7 +38,7 @@
 |CCK|Cocos Islands          = [[Cocos Islands]]
 |CHE|SUI|Switzerland|Suiza  = [[Suiza]]
 |CHL|CHI|Chile              = [[Chile]]
-|CHN|CPR|Maldang Republika ning Tsina|Tsina|People's Republic of China = [[Maldang Republika ning Tsina|Tsina]]
+|CHN|PRC|Maldang Republika ning Tsina|Tsina|People's Republic of China = [[Maldang Republika ning Tsina|Tsina]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
 |CZE|Republika ning Tseka|Czech Republic = [[Republika ning Tseka]]
