*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -38,6 +38,7 @@
 |CCK|Cocos Islands          = Flag of the Cocos (Keeling) Islands.svg
 |CHE|SUI|Switzerland|Suiza  = Flag of Switzerland.svg
 |CHL|CHI|Chile              = Flag of Chile.svg
+|CHN|PRC|Maldang Republika ning Tsina|Tsina|People's Republic of China|China = Flag of the People's Republic of China.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
 |CZE|Republika ning Tseka|Czech Republic = Flag of the Czech Republic.svg
@@ -105,7 +106,6 @@
 |KATL|Catalonia = Flag of Catalonia.svg
 |KAZ|Kazakhstan = Flag of Kazakhstan.svg
 |KEN|Kenya = Flag of Kenya.svg
-|KIN|People's Republic of China = Flag of the People's Republic of China.svg
 |KIR|Kyrgyzstan = Flag of Kyrgyzstan.svg
 |KMB|Cambodia = Flag of Cambodia.svg
 |KOL|Colombia = Flag of Colombia.svg
