*Empty MediaWiki Message*

--- a/Template:Country.mw
+++ b/Template:Country.mw
@@ -40,6 +40,7 @@
 |CHL|CHI|Chile              = [[Chile]]
 |CHN|PRC|Maldang Republika ning Tsina|Tsina|People's Republic of China|China = [[Maldang Republika ning Tsina|Tsina]]
 |CIV|Côte d'Ivoire|Cote d'Ivoire = [[Côte d'Ivoire]]
+|CMR|Cameroon               = [[Cameroon]]
 |CYP|Sipre|Cyprus           = [[Sipre]]
 |CZE|Republika ning Tseka|Czech Republic = [[Republika ning Tseka]]
 |DZA|ALG|Algeria            = [[Algeria]]
@@ -101,7 +102,6 @@
 |JUG|SFR Yugoslavia = [[SFR Yugoslavia]]
 |JUGK|Kingdom of Yugoslavia = [[Kingdom of Yugoslavia]]
 |KAJ|Cayman Islands = [[Cayman Islands]]
-|KAM|Cameroon = [[Cameroon]]
 |KAT|Qatar = [[Qatar]]
 |KATL|Catalonia = [[Catalonia]]
 |KAZ|Kazakhstan = [[Kazakhstan]]
