*Empty MediaWiki Message*

--- a/Template:Flagcountry.mw
+++ b/Template:Flagcountry.mw
@@ -40,6 +40,7 @@
 |CHL|CHI|Chile              = Flag of Chile.svg
 |CHN|PRC|Maldang Republika ning Tsina|Tsina|People's Republic of China|China = Flag of the People's Republic of China.svg
 |CIV|Côte d'Ivoire|Cote d'Ivoire = Flag of Cote d'Ivoire.svg
+|CMR|Cameroon               = Flag of Cameroon.svg
 |CYP|Sipre|Cyprus           = Flag of Cyprus.svg
 |CZE|Republika ning Tseka|Czech Republic = Flag of the Czech Republic.svg
 |DZA|ALG|Algeria            = Flag of Algeria.svg
@@ -101,7 +102,6 @@
 |JUG|SFR Yugoslavia = Flag of SFR Yugoslavia.svg
 |JUGK|Kingdom of Yugoslavia = Flag of the Kingdom of Yugoslavia.svg
 |KAJ|Cayman Islands = Flag of the Cayman Islands.svg
-|KAM|Cameroon = Flag of Cameroon.svg
 |KAT|Qatar = Flag of Qatar.svg
 |KATL|Catalonia = Flag of Catalonia.svg
 |KAZ|Kazakhstan = Flag of Kazakhstan.svg
