--- a/Benigno_Aquino,_Jr..mw
+++ b/Benigno_Aquino,_Jr..mw
@@ -25,7 +25,7 @@ Uli ning pamakamate da kang Ninoy, bigla yang meragul ing oposisyun. Manibat kin
 
 Uli na ning pamakamate, mibili ya king pansing ning malda y Cory, a balu nang Ninoy. Karas ning 1986, mengampanya ya y Cory Aquno ketang snap election a inutus nang Marcos bang mayampat ing milalako nang tiwala ning malda king kayang rehimen. Ketang limampulu’t pitung (57) aldo ning pamangampanya bayu ing alalan anyang [[Febrero 7]], 1986, linibut ya king bansa ing partidung UNIDO nang Aquino, at alus eganaganang lalawigan apuntalan da. Kabang mangampanya, atwan de y Aquino deng pakalupung a taung gugulisak a "Cory! Cory! Cory!". Lipat ning pamagdeklara ning Commission on Elections (COMELEC) a y Marcos ing sinambut king alalan, e ra tinggap di Cory ampon reng keyang talasuporta ing dekalarsyun ampon sinabi rang dang mepirait ing resulta. Ini ing penibatan ning [[EDSA Revolution|People Power]] revolucion a mitabi kang Marcos at miglukluk kang Cory anting Pamuntuk. 
 
-[[File:250px-Php_bill_500_front.jpg|right|thumb|250px|Makalarawan ya y Ninoy Aquino ketang perang papil a limang dalan (500) a pesus]]
+[[File:Php_bill_500_front.jpg|right|thumb|250px|Makalarawan ya y Ninoy Aquino ketang perang papil a limang dalan (500) a pesus]]
 Mipalagyu ya ing Manila International Airport a [[Ninoy Aquino International Airport]] (NAIA) anting panalala kaya, at makabili ya letratu king [[Philippine peso bills|perang papil a limang dalan a pesus]].
 
 Metung yang kongresistang pekakatawan ning mumunang distritu ning [[Tarlac]] ing kayang anak a lalaki, i [[Benigno Aquino III]], kabang lalage ne man king telebisyun at pelikula ing anak nang babai, y [[Kris Aquino]].
