--- a/Diosdado_Macapagal.mw
+++ b/Diosdado_Macapagal.mw
@@ -43,7 +43,7 @@ Sinambut yang presidenti anyang 1961, a nukarin dakal ya likwan a pamana king ba
 * Misubung king Pamakipaglualu king karapatan ning Pilipinas king Sabah Karin king Malaysia. 
 
 == Kaibat ning Panga-Pamuntuk ==
-[[Image:300px-Php bill 200 front.jpg |right|thumb|300px|Y Diosdado Macapagal makalarawan ya keng [[Philippine peso bills|200-peso bill]].]]
+[[Image:Php bill 200 front.jpg |right|thumb|300px|Y Diosdado Macapagal makalarawan ya keng [[Philippine peso bills|200-peso bill]].]]
 Inyang [[1971]], Macapagal meyalal ya bilang pamuntuk ning constitutional convention a menalili king 1973 constitution ng diktadurang Marcos.  Tinagal ya at sinambut assemblyman ning Batasang Pambansa. Dapot migsalita yang masikan salalng king gubyerno anyang alilan da ne inyang 1973 ing Saligang Batas ning Pilipinas ban mayun king pansarili nang capagnasan ning makalukluk a kapamahalaan. E mu nanu ing peligro binie na niti ning bie na at ning keyang pamilya. 
 
 Inyang  [[1979]] mitatag yang [[National Union for Liberation (Philippines)|National Union for Liberation]] para labanan ne ing regimeng Marcos.
