*Empty MediaWiki Message*

--- a/Las_Piñas.mw
+++ b/Las_Piñas.mw
@@ -13,7 +13,7 @@
  districts    = Magdilidiling Distritu ning Lakanbalen Las Piñas |
  class        = primera klasi; urban |
  mayor        = Imelda Aguilar |
- locatormapfile = [[File:250px-Ph_locator_ncr_las_pinas.png]] |
+ locatormapfile = Ph locator ncr laspinas.png
 }}
 
 Ing '''Lakanbalen Las Piñas''' (populasyun: 528,011 ''Sensus 2000'') metung yang Lakanbalen king  [[Metro Manila|National Capital Region]] ning  [[Filipinas]]. Ing sepu na king pangulu at pangulung aslagan iyapin ing [[Parañaque Lakanbalen]]; king aslagan at maulingaslagan iyapin ing   [[Muntinlupa Lakanbalen]]; king mauli iyapin ing Balen ning [[Imus, Cavite]]; king maulingalbugan iyapin ing Balen ning [[Bacoor, Cavite]]; at king pangulungalabugan ing masanting a akakit a  [[Manila Bay]]. Kapitna king kayang gabun magagamit para tuknangan da ring memalen at ing mitatagan a kapitna naman para keng commercio, industria at institutional naman. Atin yang atlung zona ing Lakanbalen Las Piñas ing:  [[Manila Bay]], Coastal Margin at  Guadalupe Plateau.
