*Empty MediaWiki Message*

--- a/Bulkang_Taal.mw
+++ b/Bulkang_Taal.mw
@@ -1,6 +1,6 @@
 {{Infobox Mountain
 | Name = Taal Volcano
-| Photo =300px-Taal_volcano_aerial.jpg
+| Photo =Taal_volcano_aerial.jpg
 | Caption =Aerial photo of Taal Volcano
 | Elevation = 400 metres (1,312 feet)
 | Location = [[Luzon]], [[Filipinas]]
