Changing by free file

--- a/Estratubulkan.mw
+++ b/Estratubulkan.mw
@@ -6,7 +6,7 @@
 
 [[File:Rainierreflect1.jpg|thumb|right|300px|Mt. Rainier, a stratovolcano in Washington.]]
 
-[[File:300px-Kazbegi1.jpg|thumb|right|300px|Mt. [[Kazbek]] in [[Georgia (country)|Georgia]], a dormant stratovolcano in the [[Caucasus Mountains|Caucasus]]]]
+[[File:Khevi, Georgia — Mount Kazbegi & „Gergetis Sameba“ Church.jpg|thumb|right|300px|Mt. [[Kazbek]] in [[Georgia (country)|Georgia]], a dormant stratovolcano in the [[Caucasus Mountains|Caucasus]]]]
 
 [[File:300px-Popocatépetl_sunrise.jpg|thumb|300px|right|[[Popocatépetl]], an active stratovolcano in [[Mexico]]]]
 [[File:VOLCANO.jpeg|thumb| volcano]]
