*Empty MediaWiki Message*

--- a/Estratubulkan.mw
+++ b/Estratubulkan.mw
@@ -1,4 +1,4 @@
-[[File:300px-Stratovolcano.jpg|thumb|right|300px|Stratovolcano]]
+[[File:Stratovolcano.jpg|thumb|right|300px|Stratovolcano]]
 
 [[File:Cono_de_Arita,_Salta._(Argentina).jpg|thumb|right|300px|Cono de Arita, a stratovolcano in Salta, [[Argentina]].]]
 
@@ -12,7 +12,7 @@
 [[File:VOLCANO.jpeg|thumb| volcano]]
 
 
-Ing '''stratovolcano''' o kaya keng amanung Kapampangan "matilus a bulkan", metung yang matas [[Volcanic cone|balasusu]] [[bulkan]] a nung nu dakal ya sapisapin a mesias a [[lava]], [[tephra]], at [[abung bulkan]]. Dening bulkan a reni maka ugis lang matarik a uangis at maralas lang mamakbung mangasikan. Ing lavang mamagus [[marayuput]] at lalangi at mangasyas bayu miras king dayu. Ing penibatan ning magma matuturing [[acidic]] a kaya matas king [[silica]] at kasantingan a ([[rhyolite]], [[dacite]], [[andesite]], o [[basalt]]). Iti kabaligtaran kareng e misyadung mangasikan [[Igneous rock#Chemical Classification|pangkaraniwan]] amagma a bubuu king [[shield bulkan]] (kalupa na mo ning [[Mauna Loa]] king Hawaii), nung nu atin yang malapad a bitis a ding kayang baidbid malume la. Dakal kareng startovolcano lalagpas la keng katas a 2500 m.
+Ing '''estratubulkan''' o kaya keng amanung Kapampangan "matilus a bulkan", metung yang matas [[Volcanic cone|balasusu]] [[bulkan]] a nung nu dakal ya sapisapin a mesias a [[lava]], [[tephra]], at [[abung bulkan]]. Dening bulkan a reni maka ugis lang matarik a uangis at maralas lang mamakbung mangasikan. Ing lavang mamagus [[marayuput]] at lalangi at mangasyas bayu miras king dayu. Ing penibatan ning magma matuturing [[acidic]] a kaya matas king [[silica]] at kasantingan a ([[rhyolite]], [[dacite]], [[andesite]], o [[basalt]]). Iti kabaligtaran kareng e misyadung mangasikan [[Igneous rock#Chemical Classification|pangkaraniwan]] amagma a bubuu king [[shield bulkan]] (kalupa na mo ning [[Mauna Loa]] king Hawaii), nung nu atin yang malapad a bitis a ding kayang baidbid malume la. Dakal kareng startovolcano lalagpas la keng katas a 2500 m.
 == Alimbawa ==
 
 * [[Aragats]], [[Armenia]]
