--- a/Estratubulkan.mw
+++ b/Estratubulkan.mw
@@ -8,7 +8,7 @@
 
 [[File:Khevi, Georgia — Mount Kazbegi & „Gergetis Sameba“ Church.jpg|thumb|right|300px|Mt. [[Kazbek]] in [[Georgia (country)|Georgia]], a dormant stratovolcano in the [[Caucasus Mountains|Caucasus]]]]
 
-[[File:300px-Popocatépetl_sunrise.jpg|thumb|300px|right|[[Popocatépetl]], an active stratovolcano in [[Mexico]]]]
+[[File:Popocatopetl sunrise.jpg|thumb|300px|right|[[Popocatépetl]], an active stratovolcano in [[Mexico]]]]
 [[File:VOLCANO.jpeg|thumb| volcano]]
 
 
