([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Popocatopetl sunrise.jpg]] → [[File:Popocatépetl sunrise.jpg]] To correct obvious errors in file names, including misspelled proper nouns, incorrect dates, and misidentified objects or organisms.

--- a/Estratubulkan.mw
+++ b/Estratubulkan.mw
@@ -8,7 +8,7 @@
 
 [[File:Khevi, Georgia — Mount Kazbegi & „Gergetis Sameba“ Church.jpg|thumb|right|300px|Mt. [[Kazbek]] in [[Georgia (country)|Georgia]], a dormant stratovolcano in the [[Caucasus Mountains|Caucasus]]]]
 
-[[File:Popocatopetl sunrise.jpg|thumb|300px|right|[[Popocatépetl]], an active stratovolcano in [[Mexico]]]]
+[[File:Popocatépetl sunrise.jpg|thumb|300px|right|[[Popocatépetl]], an active stratovolcano in [[Mexico]]]]
 [[File:VOLCANO.jpeg|thumb| volcano]]
 
 
