Replacing Detroit_flag.png with [[File:Flag_of_Detroit,_Michigan.png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/Detroit,_Michigan.mw
+++ b/Detroit,_Michigan.mw
@@ -4,7 +4,7 @@
  | nickname = Motor City, Motown, Rock City, Hockeytown, The D.
  | motto = "Speramus Meliora; Resurget Cineribus"<br />([[Latin]] for, "We Hope For Better Things; It Shall Rise From the Ashes")
  | image_skyline = DetroitSkyline.jpg
- | image_flag = Detroit flag.png
+ | image_flag = Flag of Detroit, Michigan.png
  | image_seal = Detroit Seal.png
  | image_map = Detroit_Wayne.png
  | map_caption = Location in [[Wayne County, Michigan|Wayne County]], [[Michigan]]
