Replacing Napa_County_ca_seal.jpg with [[File:Seal_of_Napa_County,_California_(2005).png]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/Napa_County,_California.mw
+++ b/Napa_County,_California.mw
@@ -1,7 +1,7 @@
 {{Infobox U.S. County|
  county  = Napa County|
  state = California |
- seal = Napa County ca seal.jpg |
+ seal = Seal of Napa County, California (2005).png |
  map = California map showing Napa County.png |
  map size = 120 |
  founded = 1850 |
