--- a/Riverside,_California.mw
+++ b/Riverside,_California.mw
@@ -1,6 +1,6 @@
 {{Infobox City|official_name = Riverside, California
 |image_skyline = Riverside mountain.jpg
-|nickname=The Lakanbalen da reng pun dutung|image_flag =riverflag.PNG
+|nickname=The Lakanbalen da reng pun dutung|image_flag =Flag of Riverside, California.svg
 |image_seal = City-of-riverside.jpg
 |image_map = Riverside_County_California_Incorporated_and_Unincorporated_areas_Riverside_Highlighted.svg
 |map_caption = Location in the state of California
