--- a/Chico,_California.mw
+++ b/Chico,_California.mw
@@ -7,7 +7,7 @@
 |image_skyline = Chico State's Kendall Hall.JPG
 |imagesize = 250px
 |image_caption = Kendall Hall at [[California State University, Chico]]
-|image_seal = sealcityofchico.gif
+|image_seal = Seal of Chico, California.png
 |image_map = Butte_County_California_Incorporated_and_Unincorporated_areas_Chico_Highlighted.svg
 |mapsize =
 |map_caption = kairinan ning Chico king California
