--- a/Adelanto,_California.mw
+++ b/Adelanto,_California.mw
@@ -9,7 +9,7 @@
 |image_caption            = 
 |image_flag               = 
 |flag_size                = 
-|image_seal               = Seal_adelanto.png
+|image_seal               = Seal of Adelanto, California.png
 |seal_size                = 
 |image_shield             = 
 |shield_size              = 
