--- a/California.mw
+++ b/California.mw
@@ -1,7 +1,7 @@
 {{Otheruses1|the U.S. State}}{{US state |
  Name = California|
  Fullname = State ning California|
- Flag = California state flag.png|
+ Flag = Seal of California.svg|
  Flaglink = [[Bandera ning California]] |
  Seal = Seal of California.png |
  Map = Map of USA highlighting California.png |
