--- a/California.mw
+++ b/California.mw
@@ -1,9 +1,9 @@
 {{Otheruses1|the U.S. State}}{{US state |
  Name = California|
  Fullname = State ning California|
- Flag = Seal of California.svg|
+ Flag = California state flag.png|
  Flaglink = [[Bandera ning California]] |
- Seal = Seal of California.png |
+ Seal = Seal of California.svg |
  Map = Map of USA highlighting California.png |
  Nickname = The Golden State |
  Capital = [[Sacramento, California|Sacramento]] |
