--- a/Cyclo_(Rockband).mw
+++ b/Cyclo_(Rockband).mw
@@ -2,6 +2,9 @@ Ing '''Cyclo (Rockband)''' metung yang bandang [[Rock Kapampangan]] a miyabe ken
 ning mumunang [[CD]] ning [[RocKapampangan]] a kinudta ning 20 banua y [[Jason Paul Laxamana]].
 
 ==Ding Kayanib==
+'''Hernan Villanueva - Bass'''
+
+'''Dale Myron de Leon - Drums'''
 
 ==Ding Kanta==
 
