--- a/Melilla.mw
+++ b/Melilla.mw
@@ -28,7 +28,7 @@
 |website = [http://www.melilla.es Ciudad Autónoma de Melilla]
 }}
 
-Ing '''Melilla''' metung yang  [[autonomous cities of Spain|autonomous  a lakanbalen]] ning [[Espanya]] atiu king  [[Mediterranean]], keng pampang ning [[Pangulung Africa]]. Iti mabibilang ya bilang dake ning [[Málaga (province)|Málaga province]] bayu Marsu14, 1995, ingyang ing [[Statute ning Autonomy]] ning lakanbalen mipasar ya. 
+Ing '''Melilla''' metung yang  [[autonomous cities of Spain|autonomous  a lakanbalen]] ning [[Espanya]] atiu king  [[Mediterranean]], keng pampang ning [[Pangulung Africa]]. Iti mabibilang ya bilang dake ning [[Málaga (province)|Málaga province]] bayu Marsu 14, 1995, ingyang ing [[Statute ning Autonomy]] ning lakanbalen mipasar ya. 
 
 
 == Dalerayan ==
