--- a/Albrecht_Dürer.mw
+++ b/Albrecht_Dürer.mw
@@ -22,7 +22,7 @@
 | awards        =
 }}-->
 {{foreignchar|ü|Albrecht Duerer}}
-I '''Albrecht Dürer''' ([[Mayu21]], [[1471]] – [[Abil 6]], [[1528]]) <ref name=Mueller>Mueller, Peter O. (1993) ''Substantiv-Derivation in Den Schriften Albrecht Durers'', Walter de Gruyter. ISBN 3-11-012815-2.</ref> metung yang [[Alemania|Aleman]] a talapinta, talagawang grabadu ampong matematiku. 
+I '''Albrecht Dürer''' ([[Mayu 21]], [[1471]] – [[Abil 6]], [[1528]]) <ref name=Mueller>Mueller, Peter O. (1993) ''Substantiv-Derivation in Den Schriften Albrecht Durers'', Walter de Gruyter. ISBN 3-11-012815-2.</ref> metung yang [[Alemania|Aleman]] a talapinta, talagawang grabadu ampong matematiku. 
 
 Mibait ya at mete king [[Nuremberg]], [[Alemania]], at pikabaluan yang dili anting metung a talagawang grabadu. da reng [[old masters]]. Maralas, tuki-tuki la (''series'') la reng kayang grabadu o limbag, ania ating grupu da reng miayaliwang milimbag tungkul king metung a paksa. Ing pekataniag a serie ya pin itang ''Apocalypse'' (1498), ampo detang aduang serie tungkul king [[w:Passion (Christianity)|pasiun nang Jesucristo]], itang ''Great Passion'' (1498-1510) ampo ing ''Little Passion'' (1510-1511).  
 
