--- a/Ulysses_S._Grant.mw
+++ b/Ulysses_S._Grant.mw
@@ -8,7 +8,7 @@
 | successor=[[Rutherford B. Hayes]]
 | birth_date=[[Abril 27]], [[1822]]
 | birth_place=[[Point Pleasant, Ohio]]
-| death_date=[[Juliu23]], [[1885]], age 63
+| death_date=[[Juliu 23]], [[1885]], age 63
 | death_place=[[Wilton, New York|Mount McGregor, New York]]
 | spouse=[[Julia Grant|Julia Dent Grant]]
 | religion=[[Methodist]]
