Replacing BXVI_CoA_like_gfx_PioM.svg with [[File:Coat_of_Arms_of_Benedictus_XVI.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #2]]: To change from a

--- a/Template:Benedict_XVI.mw
+++ b/Template:Benedict_XVI.mw
@@ -1,7 +1,7 @@
 {| width="95%" align="center" class="toccolours"
 |-
 | style="background-color: #ccccff;" align="center" |'''[[Papa Benedict XVI]]'''
-| [[Image:BXVI CoA like gfx PioM.svg|35px|Papa Benedict XVI]]
+| [[Image:Coat of Arms of Benedictus XVI.svg|35px|Papa Benedict XVI]]
 |-
 | align="center" |
 <small>
