*Empty MediaWiki Message*

--- a/Liv_and_Maddie.mw
+++ b/Liv_and_Maddie.mw
@@ -1,1 +1,1 @@
-I '''Liv and Maddie''' metung yang [[Estados Unidos|Americana]]ng seryeng pang-telebisyon king [[Disney Channel]].
+I '''''Liv and Maddie''''' metung yang [[Estados Unidos|Americana]]ng seryeng pang-telebisyon king [[Disney Channel]].
